{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 1224,
  "lineage": "5de68eff-eb21-9e50-18a6-c48e1db7a8e4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697755754723:internet-gateway/igw-0f767b753d9920672",
            "id": "igw-0f767b753d9920672",
            "owner_id": "697755754723",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:loadbalancer/app/users-lb/738e7410e24e5b79",
            "arn_suffix": "app/users-lb/738e7410e24e5b79",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "users-lb-1843252633.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:loadbalancer/app/users-lb/738e7410e24e5b79",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "users-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-09501bec6bcc9bd08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f5db5ed36a52c04"
              },
              {
                "subnet_id": "subnet-05d15697a14c9b6da"
              }
            ],
            "subnets": [
              "subnet-04f5db5ed36a52c04",
              "subnet-05d15697a14c9b6da"
            ],
            "tags": {
              "Name": "users-application-lb"
            },
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Name": "users-application-lb",
              "Project": "GradFlow"
            },
            "vpc_id": "vpc-0644e6a9b5ffdae5c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:loadbalancer/app/users-lb/738e7410e24e5b79"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Ruta no encontrada",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:loadbalancer/app/users-lb/738e7410e24e5b79",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "users_create_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-create/f50c11c3c55ba827",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/07367f0d8b19f3eb",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/users_create/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/07367f0d8b19f3eb",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7",
            "priority": 10,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/07367f0d8b19f3eb"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_listener.http",
            "aws_lb_target_group.users_create",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "users_delete_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-delete/a14bf1e221dc4044",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/9967f4a6b29ae38d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/users_delete/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/9967f4a6b29ae38d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7",
            "priority": 20,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/9967f4a6b29ae38d"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_listener.http",
            "aws_lb_target_group.users_delete",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "users_list_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-list/cc479f08b7177f8a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/539c0eb90cf6ec91",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/users_list/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/539c0eb90cf6ec91",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7",
            "priority": 30,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/539c0eb90cf6ec91"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_listener.http",
            "aws_lb_target_group.users_list",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "users_search_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-search/1e46a0d89e0b4301",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/e44d4a99bac3c374",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/users_search/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/e44d4a99bac3c374",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7",
            "priority": 50,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/e44d4a99bac3c374"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_listener.http",
            "aws_lb_target_group.users_search",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "users_update_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-update/184820c2d2846cef",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/442b0deeb9e1463c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/users_update/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/442b0deeb9e1463c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener/app/users-lb/738e7410e24e5b79/ca6718a41da208c7",
            "priority": 40,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:listener-rule/app/users-lb/738e7410e24e5b79/ca6718a41da208c7/442b0deeb9e1463c"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_listener.http",
            "aws_lb_target_group.users_update",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "users_create",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-create/f50c11c3c55ba827",
            "arn_suffix": "targetgroup/tg-users-create/f50c11c3c55ba827",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api-docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-create/f50c11c3c55ba827",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-users-create",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-create/f50c11c3c55ba827"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "users_delete",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-delete/a14bf1e221dc4044",
            "arn_suffix": "targetgroup/tg-users-delete/a14bf1e221dc4044",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api-docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-delete/a14bf1e221dc4044",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-users-delete",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-delete/a14bf1e221dc4044"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "users_list",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-list/cc479f08b7177f8a",
            "arn_suffix": "targetgroup/tg-users-list/cc479f08b7177f8a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api-docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-list/cc479f08b7177f8a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-users-list",
            "port": 3003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-list/cc479f08b7177f8a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "users_search",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-search/1e46a0d89e0b4301",
            "arn_suffix": "targetgroup/tg-users-search/1e46a0d89e0b4301",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api-docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-search/1e46a0d89e0b4301",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-users-search",
            "port": 3005,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-search/1e46a0d89e0b4301"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "users_update",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-update/184820c2d2846cef",
            "arn_suffix": "targetgroup/tg-users-update/184820c2d2846cef",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api-docs",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-update/184820c2d2846cef",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-users-update",
            "port": 3004,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:697755754723:targetgroup/tg-users-update/184820c2d2846cef"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697755754723:route-table/rtb-00e2292a38e1cc578",
            "id": "rtb-00e2292a38e1cc578",
            "owner_id": "697755754723",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f767b753d9920672",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697755754723",
            "id": "rtb-00e2292a38e1cc578",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d04d3cc8f86493b2",
            "region": "us-east-1",
            "route_table_id": "rtb-00e2292a38e1cc578",
            "subnet_id": "subnet-05d15697a14c9b6da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087bc233565d6eec5",
            "region": "us-east-1",
            "route_table_id": "rtb-00e2292a38e1cc578",
            "subnet_id": "subnet-04f5db5ed36a52c04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697755754723:security-group/sg-09501bec6bcc9bd08",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico de salida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09501bec6bcc9bd08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir trafico HTTP desde internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "697755754723",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697755754723",
            "id": "sg-09501bec6bcc9bd08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697755754723:security-group/sg-01ec17fb7eedf796c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir todo el trafico de salida",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ec17fb7eedf796c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH for CI/CD",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Permitir trafico del ALB a los microservicios",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09501bec6bcc9bd08"
                ],
                "self": false,
                "to_port": 3005
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "697755754723",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697755754723",
            "id": "sg-01ec17fb7eedf796c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697755754723:subnet/subnet-05d15697a14c9b6da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d15697a14c9b6da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697755754723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697755754723",
            "id": "subnet-05d15697a14c9b6da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697755754723:subnet/subnet-04f5db5ed36a52c04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f5db5ed36a52c04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697755754723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            },
            "vpc_id": "vpc-0644e6a9b5ffdae5c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697755754723",
            "id": "subnet-04f5db5ed36a52c04",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:697755754723:vpc/vpc-0644e6a9b5ffdae5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3cf90015532e03b",
            "default_route_table_id": "rtb-0d7bce0f94e3a9a80",
            "default_security_group_id": "sg-08861cb3067e1ab17",
            "dhcp_options_id": "dopt-09c9a738bb79b4b08",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0644e6a9b5ffdae5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7bce0f94e3a9a80",
            "owner_id": "697755754723",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "users",
              "ManagedBy": "Terraform",
              "Project": "GradFlow"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "697755754723",
            "id": "vpc-0644e6a9b5ffdae5c",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}